Fix build system. Remove contents

--- a/commands.tex
+++ b/commands.tex
@@ -28,7 +28,7 @@
 % لینک‌ها به رنگ سیاه ظاهر خواهند شد که برای پرینت گرفتن، مناسب‌تر است
 %\usepackage[pagebackref=false]{hyperref}
 %بسته‌ی لازم برای مراجع
-\usepackage[nonamebreak,square]{natbib}
+\usepackage[nonamebreak,square,numbers]{natbib}
 % بسته‌ لازم برای تنظیم سربرگ‌ها
 \usepackage{fancyhdr}
 % بسته‌ای برای ظاهر شدن «مراجع» و «نمایه» در فهرست مطالب
