--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \frontmatter
 %\input{frontmatters}
-\input{preface}
+%\input{preface}
 \tableofcontents
 %\listoffigures
 \clearpage{\pagestyle{empty}\cleardoublepage}
