--- a/introduction.tex
+++ b/introduction.tex
@@ -3,3 +3,12 @@
 \addcontentsline{toc}{chapter}{مقدمه}
 \chapter*{مقدمه}\markboth{مقدمه}{مقدمه}
 
+امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده\پانوشت{data} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم  برای استنتاج قواعد کلی از یک سری داده مشاهده شده موضوع اصلی یادگیری ماشین است.
+
+داده یک مفهوم قراردادی و وابسته به دامنه\پانوشت{domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا برداری\پانوشت{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که هر عنصر از این بردار نمایش‌دهنده میزان تکرار یک کلمه است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
+
+گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه گره‌\پانوشت{node} و یک مجموعه یال‌\پانوشت{edge} که ارتباط بین گره‌ها را معین می‌کند تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه گره‌ها، مجموعه اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه گره‌ها، مجموعه اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده عناصر سازنده آن موجودیت هستند.
+
+انعطاف‌پذیری گراف‌ها سبب استفاده از آن‌ها برای نمایش انواع داده‌ها شده است. در زیر به برخی از آن‌ها اشاره می‌کنیم.
+
+
