Introduction is ready

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,2 +1,13 @@
-\chapter{پیش‌زمینه}\markboth{پیش‌زمینه}{پیش‌زمینه}
-asf
+\chapter{پیش‌زمینه}\markboth{پیش‌زمینه}{پیش‌زمینه}\label{chap:prerequisites}
+\section{نظریه گراف}
+\subsection{گراف، زیرگراف و یکریختی}
+\subsection{همسایگی و درجه}
+\subsection{گشت، مسیر، دور، زیردرخت}
+\section{مقایسه گراف‌ها}
+\section{روش‌های نمایش گراف}
+\section{گراف کرنل}
+\subsection{کرنل‌ها در یادگیری ماشین}
+\subsection{مبانی گراف کرنل‌}
+\subsection{کرنل‌های مبتنی بر مسیر}
+\subsection{کرنل‌های مبتنی بر زیرگراف‌های کوچک}
+\subsection{کرنل‌های مبتنی بر زیردرخت‌ها}
