--- a/commands.tex
+++ b/commands.tex
@@ -83,6 +83,10 @@
 \newtheorem{remark}[definition]{ملاحظه}
 \newtheorem{example}[definition]{مثال}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\جستار}[1] {\cite{#1}}
+\newcommand{\ارجا}[1]{\ref{#1}}
+\renewcommand{\درشت}[1]{\textbf{#1}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
 % تعریف دستورات جدید برای خلاصه نویسی و راحتی کار در هنگام تایپ فرمول‌های ریاضی
 \newcommand{\mA}{\mathcal{A}}% مجموعه‌ی عامل‌ها
 \newcommand{\mB}{\mathcal{B}}% زیرمجموعه‌ای از عامل‌ها
