--- a/introduction.tex
+++ b/introduction.tex
@@ -9,6 +9,20 @@
 
 گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه گره‌\پانوشت{node} و یک مجموعه یال‌\پانوشت{edge} که ارتباط بین گره‌ها را معین می‌کند تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه گره‌ها، مجموعه اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه گره‌ها، مجموعه اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده عناصر سازنده آن موجودیت هستند.
 
-انعطاف‌پذیری گراف‌ها سبب استفاده از آن‌ها برای نمایش انواع داده‌ها شده است. در زیر به برخی از آن‌ها اشاره می‌کنیم.
+به دلیل همین انعطاف‌پذیری، گراف در بسیاری از رشته‌ها مورد توجه قرار گرفته و بسیاری از انواع داده با گراف مدل می‌شوند. در زیر به کاربرد گراف در دو رشته که با موضوع پایان‌نامه پیشرو مرتبط است اشاره می‌کنیم.
 
+\درشت{شیمی} یکی از رشته‌هایی است که استفاده فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در شیمی محاسباتی\پانوشت{chemoinformatics} است.
 
+\درشت{بیوانفورماتیک}\پانوشت{bioinformatics} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌\پانوشت{\متن‌لاتین{protein structure}}، هم‌بیانی\پانوشت{co-expression} پروتئین‌ها یا ژن‌ها، تعاملات پروتئین-پروتئین\پانوشت{\متن‌لاتین{protein-protein interactions}}، شبکه‌های تنظیمی\پانوشت{\متن‌لاتین{regulatory networks}} و شبکه‌های متابولیک\پانوشت{\متن‌لاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی فنوتیپ\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
+
+ % \درشت{شبکه‌های اجتماعی} از دیگر رشته‌هایی است که گراف‌ها و تکنیک‌های یادگیری ماشین، در آن بسیار مورد استفاده قرار می‌گیرند\جستار{Carrington_2005}. در سال‌های اخیر شاهد گسترش نرم‌افزارها و وب‌سایت‌های اجتماعی بوده‌ایم که در حقیقت گراف‌هایی بسیار بزرگ هستند. در ساده‌ترین حالت، گره‌های چنین گراف‌هایی اعضای شبکه اجتماعی هستند و یال بین دو گره نشان‌دهنده ارتباط بین دو عضو متناظر است. مسائلی در ارتباط با این شبکه‌ها مطرح می‌شود مثل پیش‌بینی سلایق یک شخص با توجه به دایره ارتباطات وی، میزان نفوذ افراد روی یکدیگر و یا پرسش‌های کلی‌تر مثل اینکه آیا شبکه‌های اجتماعی ساختار یکسانی دارند یا خیر.
+
+علاوه بر این رشته‌ها، گراف‌ها در تحلیل شبکه‌های اجتماعی\جستار{Carrington_2005}، پردازش تصویر\جستار{Lezoray_2012} و تحلیل شبکه‌ جهانی وب مورد استفاده گسترده قرار می‌گیرند.
+
+درست است که گراف تصویر روشن و ملموسی از داده بدست می‌دهد، اما این ویژگی هزینه خود را دارد: بسیاری از عمل‌ها\پانوشت{operations} که برای ساختارهایی نظیر آرایه و ماتریس بدیهی هستند، در گراف تعریف نشده و یا پیچیده‌اند. برای مثال می‌توان به رابطه تساوی اشاره کرد. هیچ الگوریتمی برای تست برابری دو گراف وجود ندارد که در زمان خطی قابل اجرا باشد\جستار{Garey_1979}.
+
+اکثر تکنیک‌های قوی در یادگیری ماشین با داده‌های برداری که نمایش دهنده نقاط در فضای اقلیدسی هستند، کار می‌کنند و به روشی برای اندازه‌گیری شباهت بین این نقاط نیاز دارند. به همین دلیل، تحقیقات روی گراف‌ها و یادگیری ماشین بیشتر به سمت نمایش گراف‌ها در قالب بردار در فضای اقلیدسی (و یا فضاهای برداری دیگر) گرایش دارد. هرچند نحوه تبدیل گراف به بردار یا ساختارهای دیگر، وابسته به موضوع مورد مطالعه است، اما طرح روشی که عمومیت و انعطاف‌پذیری داشته باشد مورد توجه قرار خواهد گرفت.
+
+در این پایان‌نامه برآنیم که مشکلات روش‌های پیشین برای اندازه‌گیری میزان شباهت دو گراف را شرح دهیم و روش بهتری به همین منظور ارائه کنیم.
+
+در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه گراف، ساختمان‌داده‌ گرافی، مقایسه گراف‌ها، روش تابع کرنل\پانوشت{kernel method} در یادگیری ماشین و توابع کرنل گرافی\پانوشت{graph kernels} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian_graphlet_kernel} تابع گرافلت کرنل گاوسی\پانوشت{gaussian graphlet kernel} را معرفی می‌کنیم و به بررسی و مقایسه آن با توابع کرنل گرافی پیشین می‌پردازیم و در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را می‌سنجیم.
