Progress on chapter 1

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,8 +1,60 @@
 \chapter{پیش‌زمینه}\markboth{پیش‌زمینه}{پیش‌زمینه}\label{chap:prerequisites}
+\clearpage
 \section{نظریه گراف}
+در این بخش، نظریه گراف و نحوه نمادگذاری‌ را مرور خواهیم کرد. نمادگذاری ارائه شده در این بخش برای پیگیری بخش‌ها و فصول بعدی مورد نیاز است.
+
 \subsection{گراف، زیرگراف و یکریختی}
+یک \خمیده{گراف}، یک دوتایی \گراف{G} است که در آن
+$V = \{v_{1},v_{2},...,v_{n}\}$
+یک مجموعه مرتب شامل $n$ گره‌ یا رأس است و
+$E \subseteq V\times V$
+مجموعه یال‌هاست. اندازه گراف برابر اندازه مجموعه \V تعریف می‌شود که در اینجا $n$ است.
+
+گراف \گراف{G}، یک گراف \خمیده{بدون جهت} است اگر برای هر دو رأس
+$v_{i},v_{j} \in V$
+، از اینکه
+$\edge{v}{i}{j}{E}$
+بتوان نتیجه گرفت که
+$\edge{v}{j}{i}{E}$
+؛ در غیر این صورت گراف \خمیده{جهت‌دار} است.
+
+به هر یال به صورت \یال{i}{i}
+یک \خمیده{دور} گفته می‌شود. بطور کلی بین دو رأس \Vi و \Vj در یک گراف، می‌تواند بیش از یک یال وجود داشته باشد. یک \خمیده{گراف ساده}، گرافی بدون دور است که بین هر دو رأس آن حداکثر یک یال وجود داشته باشد.
+
+در این پایان‌نامه منظور از گراف، گراف ساده بدون جهت است؛ در غیر این صورت عبارت دقیق قید خواهد شد.
+
+یک گراف ساده را می‌توان با \خمیده{ماتریس مجاورت} \A به اندازه $n\times n$نمایش داد. درایه $(i,j)$ از ماتریس \A برابر 1 است اگر یال \یال{i}{j} وجود داشته باشد. در غیر این صورت این درایه برابر صفر است. بدیهی است که ماتریس مجاورت یک گراف بدون جهت، متقارن است.
+
+رئوس و/یا یال‌های یک گراف می‌توانند برچسب داشته باشند. یک گراف برچسب‌دار را با سه‌تایی $(V,E,l)$ نشان می‌دهیم که در آن $l: X \mapsto \Sigma$ تابعی است که یک برچسب از الفبای $\Sigma$ را به هر عضو مجموعه \X نسبت می‌دهد که \X می‌تواند بسته به اینکه رئوس یا یال‌ها و یا هر دو برچسب‌گذاری شده باشند به ترتیب برابر \V یا \E و یا $V\cup E$ باشد.
+
+دو گراف \گراف{G} و
+$\graph{G^{\prime}}{V^{\prime}}{E^{\prime}}$
+\خمیده{یکریخت} (با نماد $G^{\prime} \simeq G$) هستند اگر تابع نگاشت دوسویی $f: V \rightarrow V^{\prime}$ (تابع یکریختی) وجود داشته باشد به طوری که
+$(v_{i},v_{j}) \in E$
+اگر و تنها اگر
+$(f(v_{i}),f(v_{j})) \in E^{\prime}$
+. اگر $G = G^{\prime}$ باشد آنگاه به $f$ تابع \خمیده{خودریختی} می‌گویند. برای دو گراف برچسب‌دار $G(V,E,l)$ و $G^{\prime} = (V^{\prime},E^{\prime},l^{\prime})$ تابع یکریختی (همچنین خودریختی) باید رابطه 
+$l(v_{i}) = l^{\prime}(f(v_{i}))$
+ را به ازای هر $v_{i} \in V$ نیز ارضاء کند.
+ 
+به یک تابع با آرگومان از نوع گراف، ناوردای گرافی
+\پانوشت{\متن‌لاتین{graph invariant}} گفته می‌شود اگر به دو گراف یکریخت مقدار یکسانی نسبت دهد. مثلاً توابع تعداد رئوس و تعداد یال‌ها توابع ناوردای گرافی می‌باشند.
+
+برای دو گراف \گراف{G} و $\graph{G^{\prime}}{V^{\prime}}{E^{\prime}}$، می‌گوییم $G^{\prime}$ یک \خمیده{زیرگراف} از $G$ است (با نماد $G^\prime \subseteq G$) اگر $V^\prime \subseteq V$ و $E^\prime \subseteq E$. اگر $G^\prime \subseteq G$ و $E^\prime$ شامل تمام یال‌های $(u,v) \in E$ باشد به طوری که $u,v \in V^\prime$، آنگاه می‌گوییم $G^\prime$ یک \خمیده{زیرگراف القایی} $G$ است و آن را با نماد $G^\prime \sqsubseteq G$ نشان می‌دهیم.
+
 \subsection{همسایگی و درجه}
+دو رأس \Vi و \Vj از گراف $G$ \خمیده{مجاور}\پانوشت{adjacent} و یا \خمیده{همسایه}\پانوشت{neighbour} هستند اگر $(v_i,v_j) \in E$. برای رأس $v$ همسایگی $\mN(v)$، مجموعه‌ی رئوسی است که در مجاورت آن قرار دارند؛ به عبارتی
+$\mN(v) = \{v_i | (v,v_i) \in E\}$.
+به تمام یال‌ها به فرم $(v,v_i) \in E$ \خمیده{یال‌های حادث}\پانوشت{incident} رأس $v$ گفته می‌شود.
+
+درجه یک رأس مثل $v$ که با نماد $d(v)$ نشان داده می‌شود، تعداد یال‌های حادث با آن رأس است. برای گراف‌های ساده بدون جهت عدد اصلی\پانوشت{cardinality} مجموعه $\mN(v)$ با $d(v)$ برابر است.
+
 \subsection{گشت، مسیر، دور، زیردرخت}
+یک \خمیده{گشت} در گراف، دنباله‌ای از رئوس است که دو رأس متوالی توسط یک یال به هم متصل شده‌باشند. یک \خمیده{مسیر} گشتی است که تمام رئوس آن غیرتکراری باشند. به یک مسیر بسته \خمیده{دور} گفته می‌شود. گراف G \خمیده{همبند} است اگر بین هر دو رأس آن یک مسیر وجود داشته باشد.
+
+% به زیرگراف همبند $G^\prime = (V^\prime,E\prime)$ از گراف \گراف{G} یک \خمیده{مؤلفه همبندی} گفته می‌شود
+ 
+یک زیردرخت (ریشه‌دار)، زیرگرافی بدون دور از یک گراف است
 \section{مقایسه گراف‌ها}
 \section{روش‌های نمایش گراف}
 \section{گراف کرنل}
